모바일nav-active구현/스킬 수정 완료/ 포트폴리오 추가 완료

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 <body>
   <div class="wrapper">
 
-    <div>연습 커밋</div>
-
     <header>
       <section id="home">
         <h1>하정</h1>
@@ -164,7 +162,116 @@
           <div class="container">
             <div class="skill-info">
 
-              <div class="bootstrap info-box info-box1">
+              <div class="html info-box info-box1">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/html.png" alt=""></div> 
+                    <div class="skill-name">Html</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    웹 접근성을 준수하고
+                    적절한 시맨틱 태그를 사용하며,
+                    유지 보수를 고려하여 코드를 작성합니다.
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- html -->
+
+              <div class="css info-box info-box2">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/css.png" alt=""></div> 
+                    <div class="skill-name">Css</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    반응형 웹 제작이 가능하며,
+                    flex, grid, float 속성의 이해를 통해
+                    다양한 레이아웃을 구현합니다. 
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- css -->
+  
+              <div class="sass info-box info-box3">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/sass.png" alt=""></div> 
+                    <div class="skill-name">Sass</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    자주 사용하는 속성들을 mixin에 만든 후 include하여 사용합니다.
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- sass -->
+
+              <div class="jquery info-box info-box4">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/jquery.png" alt=""></div> 
+                    <div class="skill-name">jQuery</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    스크롤 이벤트, 이미지 슬라이드, 탭메뉴를 구현할 수 있습니다.
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- jquery -->
+
+              <div class="javascript info-box info-box5">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/js.png" alt=""></div> 
+                    <div class="skill-name">Javascript</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    조건문, 반복문의 사용/ 이벤트 적용/ 배열 메소드 사용
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- javascript -->
+
+              <div class="react info-box info-box6">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div  class="img-box"><img src="./images/skill-icon/react.png" alt=""></div> 
+                    <div class="skill-name">React</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    함수형 컴포넌트와 useEffect, useState와 같은 Hooks를 이해하고
+                    유지보수에 적절한 컴포넌트를 구성합니다.
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- react -->
+
+              <div class="git info-box info-box7">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/git.png" alt=""></div> 
+                    <div class="skill-name">Git</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    협업
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- git -->
+
+              <div class="nodejs info-box info-box8">
+                <div class="flexbox">
+                  <div class="icon-box">
+                    <div class="img-box"><img src="./images/skill-icon/nodejs.png" alt=""></div> 
+                    <div class="skill-name">Node.js</div>
+                  </div>
+                  <div class="skill-des">
+                    <div class="percentage">70%</div>
+                    노드
+                  </div>
+                </div> <!-- flexbox -->
+              </div> <!-- nodejs -->
+
+              <div class="bootstrap info-box info-box9">
                 <div class="flexbox">
                   <div class="icon-box">
                     <div class="img-box"><img src="./images/skill-icon/bootstrap.png" alt=""></div> 
@@ -178,7 +285,7 @@
                 </div> <!-- flexbox -->
               </div> <!-- bootstrap -->
 
-              <div class="photoshop info-box info-box2">
+              <div class="photoshop info-box info-box10">
                 <div class="flexbox">
                   <div class="icon-box">
                     <div class="img-box"><img src="./images/skill-icon/ps.png" alt=""></div> 
@@ -191,7 +298,7 @@
                 </div> <!-- flexbox -->
               </div> <!-- photoshop -->
   
-              <div class="illustrator info-box info-box3">
+              <div class="illustrator info-box info-box11">
                 <div class="flexbox">
                   <div class="icon-box">
                     <div class="img-box"><img src="./images/skill-icon/ai.png" alt=""></div> 
@@ -204,124 +311,25 @@
                 </div> <!-- flexbox -->
               </div> <!-- illust -->
 
-              <div class="nodejs info-box info-box4">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/nodejs.png" alt=""></div> 
-                    <div class="skill-name">Node.js</div>
-                  </div>
-                  <div class="skill-des">
-                    노드
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- nodejs -->
-
-              <div class="git info-box info-box5">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/git.png" alt=""></div> 
-                    <div class="skill-name">Git</div>
-                  </div>
-                  <div class="skill-des">
-                    협업
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- git -->
-
-              <div class="react info-box info-box6">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div  class="img-box"><img src="./images/skill-icon/react.png" alt=""></div> 
-                    <div class="skill-name">React</div>
-                  </div>
-                  <div class="skill-des">
-                    함수형 컴포넌트와 useEffect, useState와 같은 Hooks를 이해하고
-                    유지보수에 적절한 컴포넌트를 구성합니다.
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- react -->
-
-              <div class="html info-box info-box7">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/html.png" alt=""></div> 
-                    <div class="skill-name">Html</div>
-                  </div>
-                  <div class="skill-des">
-                    웹 접근성을 준수하고
-                    적절한 시맨틱 태그를 사용하며,
-                    유지 보수를 고려하여 코드를 작성합니다.
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- html -->
-
-              <div class="css info-box info-box8">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/css.png" alt=""></div> 
-                    <div class="skill-name">Css</div>
-                  </div>
-                  <div class="skill-des">
-                    반응형 웹 제작이 가능하며,
-                    flex, grid, float 속성의 이해를 통해
-                    다양한 레이아웃을 구현합니다. 
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- css -->
-  
-              <div class="sass info-box info-box9">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/sass.png" alt=""></div> 
-                    <div class="skill-name">Sass</div>
-                  </div>
-                  <div class="skill-des">
-                    자주 사용하는 속성들을 mixin에 만든 후 include하여 사용합니다.
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- sass -->
-
-              <div class="jquery info-box info-box10">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/jquery.png" alt=""></div> 
-                    <div class="skill-name">jQuery</div>
-                  </div>
-                  <div class="skill-des">
-                  스크롤 이벤트, 이미지 슬라이드, 탭메뉴를 구현할 수 있습니다.
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- jquery -->
-
-              <div class="javascript info-box info-box11">
-                <div class="flexbox">
-                  <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/js.png" alt=""></div> 
-                    <div class="skill-name">Javascript</div>
-                  </div>
-                  <div class="skill-des">
-                    조건문, 반복문의 사용/ 이벤트 적용/ 배열 메소드 사용
-                  </div>
-                </div> <!-- flexbox -->
-              </div> <!-- javascript -->
-  
             </div> <!-- skill-info -->
           </div> <!-- container -->
         </div> <!-- skill-bg -->
 
         <div class="container">
           <div class="skill-circle desktop-only">
-            <div class="circle cir-bootstrap">B</div>
-            <div class="circle cir-photoshop">Ps</div>
-            <div class="circle cir-illust">Ai</div>
-            <div class="circle cir-nodejs">Node.js</div>
-            <div class="circle cir-git">Git</div>
-            <div class="circle cir-react">React</div>
+            
             <div class="circle cir-html">Html</div>
             <div class="circle cir-css">Css</div>
             <div class="circle cir-sass">Sass</div>
             <div class="circle cir-jquery">jQuery</div>
             <div class="circle cir-javascript">Js</div>
+            <div class="circle cir-react">React</div>
+            <div class="circle cir-git">Git</div>
+            <div class="circle cir-nodejs">Node.js</div>
+            <div class="circle cir-bootstrap">B</div>
+            <div class="circle cir-photoshop">Ps</div>
+            <div class="circle cir-illust">Ai</div>
+
           </div>
         </div> 
 
@@ -383,8 +391,7 @@
                 <div>03</div>
                 <div class="pofol-title">프로필 포트폴리오</div>
                 <div class="pofol-des">
-                  카페의 무인 계산대를 재현해보았습니다.
-                  메뉴 추가, 수량 확인, 현금 지불 및 거스름돈 계산이 가능합니다.
+                  작업물을 모아놓은 포트폴리오
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
@@ -420,10 +427,9 @@
               </div>
               <div class="pofol-info">
                 <div>05</div>
-                <div class="pofol-title">카페 키오스크</div>
+                <div class="pofol-title">행렬 계산기</div>
                 <div class="pofol-des">
-                  카페의 무인 계산대를 재현해보았습니다.
-                  메뉴 추가, 수량 확인, 현금 지불 및 거스름돈 계산이 가능합니다.
+                  행렬계산기 가로세로 더하기,빼기,곱,나누기
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
