스크롤 페이드인 구현중

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                     <div class="skill-name">Html</div>
                   </div>
                   <div class="skill-des">
-                    <div class="percentage">70%</div>
-                    웹 접근성을 준수하고
+                    <div class="percentage">90%</div>
+                    <div></div>웹 접근성을 준수하고
                     적절한 시맨틱 태그를 사용하며,
                     유지 보수를 고려하여 코드를 작성합니다.
                   </div>
@@ -184,7 +184,7 @@
                     <div class="skill-name">Css</div>
                   </div>
                   <div class="skill-des">
-                    <div class="percentage">70%</div>
+                    <div class="percentage">90%</div>
                     반응형 웹 제작이 가능하며,
                     flex, grid, float 속성의 이해를 통해
                     다양한 레이아웃을 구현합니다. 
@@ -199,8 +199,8 @@
                     <div class="skill-name">Sass</div>
                   </div>
                   <div class="skill-des">
-                    <div class="percentage">70%</div>
-                    자주 사용하는 속성들을 mixin에 만든 후 include하여 사용합니다.
+                    <div class="percentage">90%</div>
+                    변수 할당, 믹스인, 중첩 구문 등 sass의 편리한 기능을 사용하여 프로젝트를 진행합니다.
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- sass -->
@@ -252,8 +252,8 @@
                     <div class="skill-name">Git</div>
                   </div>
                   <div class="skill-des">
-                    <div class="percentage">70%</div>
-                    협업
+                    <div class="percentage">50%</div>
+                    깃의 기본적인 명령어들을 사용할 수 있고 
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- git -->
@@ -265,8 +265,8 @@
                     <div class="skill-name">Node.js</div>
                   </div>
                   <div class="skill-des">
-                    <div class="percentage">70%</div>
-                    노드
+                    <div class="percentage">40%</div>
+                    Node.js와 
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- nodejs -->
@@ -280,7 +280,7 @@
                   </div>
                   <div class="skill-des">
                     <div class="percentage">70%</div>
-                    부트스트랩
+                    부트스트랩에 지정된 기본 속성을 사용할 수 있고 속성을 원하는대로 변경하여 적용할 수 있습니다.  
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- bootstrap -->
@@ -292,8 +292,8 @@
                     <div class="skill-name">Photoshop</div>
                   </div>
                   <div class="skill-des">
-                    <div class="percentage">70%</div>
-                    <div>포토샵의 다양한 기능을 사용하여 이미지를 편집할 수 있으며, 와이어프레임 제작이 가능합니다.</div> 
+                    <div class="percentage">80%</div>
+                    포토샵의 다양한 기능을 사용하여 이미지를 편집할 수 있으며, 와이어프레임 제작이 가능합니다.
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- photoshop -->
@@ -305,7 +305,7 @@
                     <div class="skill-name">Illustrator</div>
                   </div>
                   <div class="skill-des">
-                    <div class="percentage">70%</div>
+                    <div class="percentage">80%</div>
                     펜툴 사용이 가능하고 간단한 로고와 일러스트를 제작할 수 있습니다.
                   </div>
                 </div> <!-- flexbox -->
