스크롤 페이드인 구현완료

--- a/index.html
+++ b/index.html
@@ -21,27 +21,19 @@
         </div>
 
         <div class="header-bg">
-          <!-- <div class="cloud cloud1"><img ssrc="./images/cloud1.png" alt=""></div>
-          <div class="cloud cloud2"><img src="./images/cloud2.png" alt=""></div>
-          <div class="cloud cloud3"><img src="./images/cloud3.png" alt=""></div> -->
-
           <div class="cloud-animation cloud-animation1">
             <div class="cloud-wrap">
               <div class="cloud cloud1 first"><img src="./images/cloud1.png" alt=""></div>
-              <!-- <div class="cloud cloud1 second"><img src="./images/cloud1.png" alt=""></div>
-              <div class="cloud cloud1 last"><img src="./images/cloud1.png" alt=""></div> -->
             </div>
           </div>
           <div class="cloud-animation cloud-animation2">
             <div class="cloud-wrap">
               <div class="cloud cloud2 first"><img src="./images/cloud2.png" alt=""></div>
-              <!-- <div class="cloud cloud2 last"><img src="./images/cloud2.png" alt=""></div> -->
             </div>
           </div>
           <div class="cloud-animation cloud-animation3">
             <div class="cloud-wrap">
               <div class="cloud cloud3"><img src="./images/cloud3.png" alt=""></div>
-              <!-- <div class="cloud cloud3"><img src="./images/cloud3.png" alt=""></div> -->
             </div>
           </div>
         </div>
@@ -99,10 +91,6 @@
             <div class="flexbox">
               <div class="me-emoticon flip">
                 <img class="front" src="./images/me-emoticon.png" alt="">
-                <div class="back me-circle">
-                  010-5113-5826 <br>
-                  applej07@naver.com
-                </div>
               </div> 
   
               <div class="me-introduce">
@@ -226,7 +214,7 @@
                   </div>
                   <div class="skill-des">
                     <div class="percentage">70%</div>
-                    조건문, 반복문의 사용/ 이벤트 적용/ 배열 메소드 사용
+                    조건문과 반복문, 이벤트 적용, 배열 메소드 등 기본적인 개념과 문법을 이해하고 사용할 수 있습니다.
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- javascript -->
@@ -253,7 +241,7 @@
                   </div>
                   <div class="skill-des">
                     <div class="percentage">50%</div>
-                    깃의 기본적인 명령어들을 사용할 수 있고 
+                    깃허브의 repository와 로컬 연결, push와 pull 등에 이용하는 기본적인 명령어들을 사용할 수 있습니다.
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- git -->
@@ -266,7 +254,7 @@
                   </div>
                   <div class="skill-des">
                     <div class="percentage">40%</div>
-                    Node.js와 
+                    Node.js와 자바스크립트의 관계를 이해하고 MongoDB를 사용하여 Todo List를 제작해보았습니다.
                   </div>
                 </div> <!-- flexbox -->
               </div> <!-- nodejs -->
@@ -391,7 +379,7 @@
                 <div>03</div>
                 <div class="pofol-title">프로필 포트폴리오</div>
                 <div class="pofol-des">
-                  작업물을 모아놓은 포트폴리오
+                  '주어진 트랙을 열심히 달린다.'는 컨셉으로 제작해본 페이지 입니다. 간단한 자기소개와 학습한 기술, 작업물 소개로 구성되어있습니다.
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
@@ -408,9 +396,10 @@
               </div>
               <div class="pofol-info">
                 <div>04</div>
-                <div class="pofol-title">거스름돈 계산</div>
+                <div class="pofol-title">계산기</div>
                 <div class="pofol-des">
-                  메뉴 추가, 현금 지불, 거스름돈 계산이 가능합니다 
+                  카페의 키오스크를 재현해 본 작업물 입니다.
+                  메뉴 추가, 현금 지불, 거스름돈 계산이 가능합니다.
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
@@ -420,26 +409,26 @@
             </div> <!-- flexbox -->
           </div> <!-- pofol-box4 -->
 
-          <div class="pofol-box pofol-box5 left">
+          <!-- <div class="pofol-box pofol-box5 left">
             <div class="flexbox">
               <div class="pofol-thumbnail">
                 <img src="images/grass.png" alt="aaaaaaaaaaaa이미지변경하기aaaaaaaaaaaaaaaaa">
               </div>
               <div class="pofol-info">
                 <div>05</div>
-                <div class="pofol-title">행렬 계산기</div>
+                <div class="pofol-title">뽀모도로 타이머</div>
                 <div class="pofol-des">
-                  행렬계산기 가로세로 더하기,빼기,곱,나누기
+                  뽀모도로 타이머입니다. 시간을 설정하는 기능, 시간이 줄어드는 기능을 구현했습니다.
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
                 </div>
-              </div> <!-- pofol-info -->
-            </div> <!-- flexbox -->
-          </div> <!-- pofol-box5 -->
+              </div>
+            </div>
+          </div> -->
     
-          <div class="pofol-box pofol-box6 right">
+          <!-- <div class="pofol-box pofol-box6 right">
             <div class="flexbox">
               <div class="pofol-thumbnail">
                 <img src="images/grass.png" alt="aaaaaaaaaaaa이미지변경하기aaaaaaaaaaaaaaaaa">
@@ -454,9 +443,9 @@
                   <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
                 </div>
-              </div> <!-- pofol-info -->
-            </div> <!-- flexbox -->
-          </div> <!-- pofol-box6 -->
+              </div>
+            </div>
+          </div>  -->
 
         </div> <!-- container -->
       </section> <!-- portfolio -->
@@ -470,7 +459,7 @@
           <p>클릭하면 Outlook이 활성화됩니다.</p>
 
           <div class="git">
-            <a href=""><img src="./images/git.png" alt=""></a>
+            <a href="https://github.com/song-tiigger/portfolio"><img src="./images/git.png" alt="깃허브 아이콘"></a>
           </div>
 
           <div class="topbtn">
