portfolio영역 이미지 수정 and 기타 이미지 교체 및 삭제

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
           <div class="container desktop-only">
             <div class="track">
-              <img src="./images/track2.png" alt="">
+              <img src="./images/track.png" alt="">
             </div>
           </div> <!-- container -->
 
@@ -331,7 +331,7 @@
           <div class="pofol-box pofol-box1 left">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/safariMockup1.png" alt="">
+                <img src="images/minumsa.png" alt="">
               </div> <!-- pofol-thumbnail -->
 
               <div class="pofol-info">
@@ -373,13 +373,14 @@
           <div class="pofol-box pofol-box3 left">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/grass.png" alt="aaaaaaaaaaaa이미지변경하기aaaaaaaaaaaaaaaaa">
+                <img src="images/profile.png" alt="">
               </div>
               <div class="pofol-info">
                 <div>03</div>
                 <div class="pofol-title">프로필 포트폴리오</div>
                 <div class="pofol-des">
-                  '주어진 트랙을 열심히 달린다.'는 컨셉으로 제작해본 페이지 입니다. 간단한 자기소개와 학습한 기술, 작업물 소개로 구성되어있습니다.
+                  '나'를 소개하는 페이지 입니다.
+                  간단한 자기소개와 학습한 기술, 작업물 소개로 구성되어있습니다.
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
@@ -392,7 +393,7 @@
           <div class="pofol-box pofol-box4 right">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/grass.png" alt="aaaaaaaaaaaa이미지변경하기aaaaaaaaaaaaaaaaa">
+                <img src="images/coffeecat.png" alt="">
               </div>
               <div class="pofol-info">
                 <div>04</div>
