skill-circle속도 조정 및 꽃 그리기 시도

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <div class="skill-bg">
           <div class="grass">
             <img class="large-only" src="./images/grass.png" alt="">
+            <span class="flower"></span>
           </div>
 
           <div class="container desktop-only">
