--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section id="home">
         <h1>하정</h1>
         <div class="logo">
-          <a class="mobile-only" href="./index.html"><img src="./images/flag.png" alt="logo"></a>
+          <a href="./index.html"><img src="./images/flag.png" alt="logo"></a>
         </div>
 
         <div class="header-bg">
@@ -70,10 +70,10 @@
 
           <div id="textFlip">
             <div class="text-wrap">
-                <div class="current">😊</div>
-                <div class="next">성실한</div>
-                <div>책임감 있는</div>
-                <div class="prev">긍정적인</div>
+              <div class="current">😊</div>
+              <div class="next">성실한</div>
+              <div>책임감 있는</div>
+              <div class="prev">긍정적인</div>
             </div>
           </div> <!-- textFlip -->
 
@@ -108,7 +108,7 @@
           <div class="about-work">
             <div class="flexbox">
               <div class="about-work-title">
-                  일을 할 때 <br> 중요하게 <br> 생각하는 것은
+                일을 할 때 <br> 중요하게 <br> 생각하는 것은
               </div>
               <div class="about-work-content">
                 <div class="about-work1">
@@ -159,7 +159,7 @@
                   </div>
                   <div class="skill-des">
                     <div class="percentage">90%</div>
-                    <div></div>웹 접근성을 준수하고
+                    웹 접근성을 준수하고
                     적절한 시맨틱 태그를 사용하며,
                     유지 보수를 고려하여 코드를 작성합니다.
                   </div>
@@ -227,7 +227,7 @@
                     <div class="skill-name">React</div>
                   </div>
                   <div class="skill-des">
-                    <div class="percentage">70%</div>
+                    <div class="percentage">50%</div>
                     함수형 컴포넌트와 useEffect, useState와 같은 Hooks를 이해하고
                     유지보수에 적절한 컴포넌트를 구성합니다.
                   </div>
@@ -380,8 +380,8 @@
                 <div>03</div>
                 <div class="pofol-title">프로필 포트폴리오</div>
                 <div class="pofol-des">
-                  '나'를 소개하는 페이지 입니다.
-                  간단한 자기소개와 학습한 기술, 작업물 소개로 구성되어있습니다.
+                  포트폴리오를 웹페이지로 제작했습니다.
+                  간단한 자기소개, 학습한 기술과 작업물 소개로 구성되어있습니다.
                 </div>
                 <div class="modal-btn">
                   <button>디자인 가이드</button>
@@ -458,10 +458,10 @@
         <div class="container contact">
           <div>감사합니다! 궁금한 내용이 있다면 연락 주세요.</div>
           <a href="mailto:applej07@naver.com" class="email">applej07@naver.com</a>
-          <p>클릭하면 Outlook이 활성화됩니다.</p>
+          <p>이메일을 클릭하면 Outlook이 활성화됩니다.</p>
 
           <div class="git">
-            <a href="https://github.com/song-tiigger/portfolio"><img src="./images/git.png" alt="깃허브 아이콘"></a>
+            <a href="https://github.com/song-tiigger/portfolio" target="_blank"><img src="./images/git.png" alt="깃허브 아이콘"></a>
           </div>
 
           <div class="topbtn">
