pc gnb hover animation 완성

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <section id="home">
         <h1>하정</h1>
-        <div class="logo mobile-only">
+        <div class="logo">
           <a href="./index.html"><img src="./images/flag.png" alt="logo"></a>
         </div>
 
@@ -39,9 +39,6 @@
         </div>
 
         <nav class="pc-nav large-only">
-          <div class="logo large-only">
-            <a href="./index.html"><img src="./images/flag.png" alt="logo"></a>
-          </div>
           <ul id="gnb"> <!-- large-only -->
             <li><a href="#home" class="selected">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
