헤더및푸터에logo추가,textFlip애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         </div> <!-- mobile-only -->
 
         <div class="intro-flip-wrap">
-          <h2>안녕하세요,</h2>
+          <!-- <h2>안녕하세요,</h2> -->
+          <span>안</span><span>녕</span><span>하</span><span>세</span><span>요</span><span>,</span>
 
           <div id="textFlip">
             <div class="text-wrap">
@@ -77,7 +78,8 @@
             </div>
           </div> <!-- textFlip -->
 
-          <h2>송하정 입니다.</h2>
+          <!-- <h2>송하정 입니다.</h2> -->
+          <span>송</span><span>하</span><span>정</span>&nbsp;&nbsp;<span>입</span><span>니</span><span>다</span><span>.</span>
 
         </div> <!-- intro-flip-wrap -->
       </section> <!-- home -->
@@ -85,7 +87,7 @@
 
     <main>
       <section id="about">
-        <h3>ABOUT</h3>
+        <h2>ABOUT</h2>
         <div class="container">
           <div class="about-me">
             <div class="flexbox">
@@ -135,7 +137,7 @@
 
 
       <section id="skill">
-        <h3>SKILL</h3>
+        <h2>SKILL</h2>
         <div class="skill-bg">
           <div class="grass">
             <img class="large-only" src="./images/grass.png" alt="">
@@ -154,7 +156,7 @@
               <div class="html info-box info-box1">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/html.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/html.png" alt="html"></div> 
                     <div class="skill-name">Html</div>
                   </div>
                   <div class="skill-des">
@@ -169,7 +171,7 @@
               <div class="css info-box info-box2">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/css.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/css.png" alt="css"></div> 
                     <div class="skill-name">Css</div>
                   </div>
                   <div class="skill-des">
@@ -184,7 +186,7 @@
               <div class="sass info-box info-box3">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/sass.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/sass.png" alt="sass"></div> 
                     <div class="skill-name">Sass</div>
                   </div>
                   <div class="skill-des">
@@ -197,7 +199,7 @@
               <div class="jquery info-box info-box4">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/jquery.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/jquery.png" alt="jquery"></div> 
                     <div class="skill-name">jQuery</div>
                   </div>
                   <div class="skill-des">
@@ -210,7 +212,7 @@
               <div class="javascript info-box info-box5">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/js.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/js.png" alt="javascript"></div> 
                     <div class="skill-name">Javascript</div>
                   </div>
                   <div class="skill-des">
@@ -223,7 +225,7 @@
               <div class="react info-box info-box6">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div  class="img-box"><img src="./images/skill-icon/react.png" alt=""></div> 
+                    <div  class="img-box"><img src="./images/skill-icon/react.png" alt="react"></div> 
                     <div class="skill-name">React</div>
                   </div>
                   <div class="skill-des">
@@ -237,7 +239,7 @@
               <div class="git info-box info-box7">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/git.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/git.png" alt="git"></div> 
                     <div class="skill-name">Git</div>
                   </div>
                   <div class="skill-des">
@@ -250,7 +252,7 @@
               <div class="nodejs info-box info-box8">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/nodejs.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/nodejs.png" alt="nodejs"></div> 
                     <div class="skill-name">Node.js</div>
                   </div>
                   <div class="skill-des">
@@ -263,7 +265,7 @@
               <div class="bootstrap info-box info-box9">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/bootstrap.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/bootstrap.png" alt="bootstrap"></div> 
                     <div class="skill-name">Bootstrap
                     </div>
                   </div>
@@ -277,7 +279,7 @@
               <div class="photoshop info-box info-box10">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/ps.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/ps.png" alt="photoshop"></div> 
                     <div class="skill-name">Photoshop</div>
                   </div>
                   <div class="skill-des">
@@ -290,7 +292,7 @@
               <div class="illustrator info-box info-box11">
                 <div class="flexbox">
                   <div class="icon-box">
-                    <div class="img-box"><img src="./images/skill-icon/ai.png" alt=""></div> 
+                    <div class="img-box"><img src="./images/skill-icon/ai.png" alt="illustrator"></div> 
                     <div class="skill-name">Illustrator</div>
                   </div>
                   <div class="skill-des">
@@ -326,7 +328,7 @@
 
 
       <section id="portfolio">
-        <h3>PORTFOLIO</h3>
+        <h2>PORTFOLIO</h2>
         <div class="container">
 
           <div class="pofol-box pofol-box1 left">
@@ -472,7 +474,10 @@
         </div> <!-- contact -->
       </div> <!-- footer-bg -->
 
-      <div class="copyright">Copyright 2022. HJ All rights reserved</div>
+      <div class="copyright">
+        <p>Copyright 2023. HJ All rights reserved</p>
+        <img src="./images/flag.png" alt="logo">
+      </div>
     </footer>
   </div> <!-- wrapper -->
 </body>
