--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/index.css"> <!-- css 연결하기 -->
-  <script src="./js/jquery.js"></script> <!-- 제이쿼리 연결 -->
-  <script src="./js/index.js"></script> <!-- js 연결 -->
+  <script src="./js/jquery.js"></script>
+  <script src="./js/index.js"></script>
   <title>송하정</title>
 </head>
 
@@ -40,7 +40,7 @@
 
         <nav class="pc-nav large-only">
           <ul id="gnb"> <!-- large-only -->
-            <li><a href="#home" class="selected">HOME</a></li>
+            <li><a href="#home" class="active_pc">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#skill">SKILL</a></li>
             <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -413,10 +413,10 @@
             </div> <!-- flexbox -->
           </div> <!-- pofol-box4 -->
 
-          <!-- <div class="pofol-box pofol-box5 left">
+          <div class="pofol-box pofol-box5 left">
             <div class="flexbox">
               <div class="pofol-thumbnail">
-                <img src="images/grass.png" alt="aaaaaaaaaaaa이미지변경하기aaaaaaaaaaaaaaaaa">
+                <img src="images/phomodoro.png" alt="뽀모도로 타이머">
               </div>
               <div class="pofol-info">
                 <div>05</div>
@@ -430,7 +430,7 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
     
           <!-- <div class="pofol-box pofol-box6 right">
             <div class="flexbox">
@@ -450,7 +450,7 @@
               </div>
             </div>
           </div>  -->
-
+          
         </div> <!-- container -->
       </section> <!-- portfolio -->
     </main>
