--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <nav class="pc-nav large-only">
           <ul id="gnb"> <!-- large-only -->
-            <li><a href="#home" class="active_pc">HOME</a></li>
+            <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#skill">SKILL</a></li>
             <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -344,7 +344,6 @@
                   홈페이지 리뉴얼을 주제로 작업한 개인 프로젝트입니다. 신간과 베스트셀러를 소개하고 민음사의 자체 콘텐츠를 소개합니다.
                 </div>
                 <div class="modal-btn">
-                  <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
                 </div>
               </div> <!-- pofol-info -->
@@ -400,9 +399,9 @@
               </div>
               <div class="pofol-info">
                 <div>04</div>
-                <div class="pofol-title">계산기</div>
+                <div class="pofol-title">거스름돈 계산</div>
                 <div class="pofol-des">
-                  카페의 키오스크를 재현해 본 작업물 입니다.
+                  카페의 키오스크를 주제로한 작업물 입니다.
                   메뉴 추가, 현금 지불, 거스름돈 계산이 가능합니다.
                 </div>
                 <div class="modal-btn">
@@ -422,10 +421,9 @@
                 <div>05</div>
                 <div class="pofol-title">뽀모도로 타이머</div>
                 <div class="pofol-des">
-                  뽀모도로 타이머입니다. 시간을 설정하는 기능, 시간이 줄어드는 기능을 구현했습니다.
+                  25분 집중, 5분 휴식을 번갈아뽀모도로 타이머입니다. 집중 시간인 25분과 휴식 시간인 5분이 번갈아가며 흐릅니다. 시간이 줄어드는 기능을 구현했습니다.
                 </div>
                 <div class="modal-btn">
-                  <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
                 </div>
               </div>
