파비콘 추가 및 불필요 이미지 삭제

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="./js/jquery.js"></script>
   <script src="./js/index.js"></script>
   <title>송하정</title>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
