pofol-btn hover애니메이션 구현중

--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
                 <div class="pofol-des">
                   홈페이지 리뉴얼을 주제로 작업한 개인 프로젝트입니다. 신간과 베스트셀러를 소개하고 민음사의 자체 콘텐츠를 소개합니다.
                 </div>
-                <div class="modal-btn">
-                  <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
+                <div class="link-btn">
+                  <a href="https://github.com/song-tiigger/minumsa" target="_blank"><button>페이지 보기</button></a>
                 </div>
               </div> <!-- pofol-info -->
             </div> <!-- flexbox -->
@@ -365,7 +365,7 @@
                   조별 프로젝트로 진행된 작업이며,
                   홈페이지의 서브메뉴에서 <strong>대관안내, 좌석배치도, 문화공간</strong> 페이지를 맡아서 제작했습니다.
                 </div>
-                <div class="modal-btn">
+                <div class="link-btn">
                   <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
 
@@ -386,7 +386,7 @@
                   포트폴리오를 웹페이지로 제작했습니다.
                   간단한 자기소개, 학습한 기술과 작업물 소개로 구성되어있습니다.
                 </div>
-                <div class="modal-btn">
+                <div class="link-btn">
                   <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
                 </div>
@@ -406,7 +406,7 @@
                   카페의 키오스크를 주제로한 작업물 입니다.
                   메뉴 추가, 현금 지불, 거스름돈 계산이 가능합니다.
                 </div>
-                <div class="modal-btn">
+                <div class="link-btn">
                   <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
                 </div>
@@ -425,7 +425,7 @@
                 <div class="pofol-des">
                   25분 집중, 5분 휴식을 번갈아뽀모도로 타이머입니다. 집중 시간인 25분과 휴식 시간인 5분이 번갈아가며 흐릅니다. 시간이 줄어드는 기능을 구현했습니다.
                 </div>
-                <div class="modal-btn">
+                <div class="link-btn">
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
                 </div>
               </div>
@@ -443,7 +443,7 @@
                 <div class="pofol-des">
                   리액트를 배우며 작업한 투두리스트입니다. useEffect, useState와 같은 Hooks를 사용했고 props를 통해 컴포넌트에 값을 전달하는 과정을 학습했습니다.  
                 </div>
-                <div class="modal-btn">
+                <div class="link-btn">
                   <button>디자인 가이드</button>
                   <button><a href="https://github.com/song-tiigger/minumsa" target="_blank">페이지 보기</a></button>
                 </div>
